chore: Added test-automation  prefix to configuration properties.

--- a/test-automation-core/src/main/resources/templates/macros/json/jira.vm
+++ b/test-automation-core/src/main/resources/templates/macros/json/jira.vm
@@ -15,7 +15,7 @@
     #if($jiraArray.size() > 0)
     <div class="indention"><b>JIRA Ticket:</b>
         #foreach($ticket in $jiraArray)
-            <a href="https://jirasw.t-mobile.com/browse/$ticket" target="_blank">$ticket</a>
+            <a href="https://$jiraUrl/$ticket" target="_blank">$ticket</a>
         #end
     </div>
     #end
